--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,22 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://rails-okc.techlahoma.org" />
+  <meta property="og:title" content="Rails OKC Workshop"/>
+  <meta property="og:description" content="Free computer programming workshop for women learning web development" />
+  <meta property="og:image" content="https://rails-okc.herokuapp.com/assets/logo.png" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:domain" value="rails-okc.techlahoma.org" />
+  <meta name="twitter:description" value="Free computer programming workshop for women learning web development" />
+  <meta name="twitter:image" content="https://rails-okc.herokuapp.com/assets/logo.png" />
+  <meta name="twitter:url" value="http://rails-okc.techlahoma.org" />
+  <meta name="twitter:label1" value="InstallFest" />
+  <meta name="twitter:data1" value="Friday, March 29, 2019 - 5:30 pm to 7:30 pm" />
+  <meta name="twitter:label2" value="Workshop" />
+  <meta name="twitter:data2" value="Saturday, March 30, 2019 - 9:30 am to 5:30 pm" />
 </head>
 <body>
   <app-root></app-root>
