Make location clearer.

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,18 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://rails-okc.techlahoma.org" />
   <meta property="og:title" content="Rails OKC Workshop"/>
-  <meta property="og:description" content="Free computer programming workshop for women learning web development" />
+  <meta property="og:description" content="Free beginner-level coding workshop for women interested in learning web development in Oklahoma City" />
   <meta property="og:image" content="https://rails-okc.herokuapp.com/assets/logo.png" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:domain" value="rails-okc.techlahoma.org" />
-  <meta name="twitter:description" value="Free computer programming workshop for women learning web development" />
+  <meta name="twitter:description" value="Free beginner-level coding workshop for women interested in learning web development in Oklahoma City" />
   <meta name="twitter:image" content="https://rails-okc.herokuapp.com/assets/logo.png" />
   <meta name="twitter:url" value="http://rails-okc.techlahoma.org" />
   <meta name="twitter:label1" value="InstallFest" />
-  <meta name="twitter:data1" value="Friday, March 29, 2019 - 5:30 pm to 7:30 pm" />
+  <meta name="twitter:data1" value="5:30 pm to 7:30 pm on Friday, March 29, 2019" />
   <meta name="twitter:label2" value="Workshop" />
-  <meta name="twitter:data2" value="Saturday, March 30, 2019 - 9:30 am to 5:30 pm" />
+  <meta name="twitter:data2" value="9:30 am to 5:30 pm on Saturday, March 30, 2019" />
 </head>
 <body>
   <app-root></app-root>
