--- a/src/index.html
+++ b/src/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rails OKC Workshop</title>
+  <title>OKC Networking Fair</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://rails-okc.techlahoma.org" />
-  <meta property="og:title" content="Rails OKC Workshop"/>
-  <meta property="og:description" content="Free beginner-level coding workshop for women interested in learning web development in Oklahoma City" />
-  <meta property="og:image" content="https://rails-okc.herokuapp.com/assets/logo.png" />
+  <meta property="og:url" content="techlahoma.org" />
+  <meta property="og:title" content="OKC Networking Fair"/>
+  <meta property="og:description" content="Free networking event in Oklahoma City" />
+  <meta property="og:image" content="https://pbs.twimg.com/profile_banners/2391970748/1410185529/1500x500" />
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:domain" value="rails-okc.techlahoma.org" />
-  <meta name="twitter:description" value="Free beginner-level coding workshop for women interested in learning web development in Oklahoma City" />
-  <meta name="twitter:image" content="https://rails-okc.herokuapp.com/assets/logo.png" />
-  <meta name="twitter:url" value="http://rails-okc.techlahoma.org" />
-  <meta name="twitter:label1" value="InstallFest" />
-  <meta name="twitter:data1" value="5:30 pm to 7:30 pm on Friday, March 29, 2019" />
-  <meta name="twitter:label2" value="Workshop" />
-  <meta name="twitter:data2" value="9:30 am to 5:30 pm on Saturday, March 30, 2019" />
+  <meta name="twitter:domain" value="techlahoma.org" />
+  <meta name="twitter:description" value="Free networking event in Oklahoma City" />
+  <meta name="twitter:image" content="https://pbs.twimg.com/profile_banners/2391970748/1410185529/1500x500" />
+  <meta name="twitter:url" value="https://twitter.com/techlahoma" />
+  <meta name="twitter:label1" value="Where" />
+  <meta name="twitter:data1" value="Project 3810 NW OKC" />
+  <meta name="twitter:label2" value="When" />
+  <meta name="twitter:data2" value="Monday April 22 from 5:30pm to 7:30pm"/>
 </head>
 <body>
   <app-root></app-root>
