Fixed grammer. Added better meta tag description

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="techlahoma.org" />
   <meta property="og:title" content="OKC Networking Fair"/>
-  <meta property="og:description" content="Free networking event in Oklahoma City" />
+  <meta property="og:description" content="Make plans to attend our networking fair if you're looking for a job, contract work, mentorship opportunities, job candidates, or just networking!" />
   <meta property="og:image" content="https://pbs.twimg.com/profile_banners/2391970748/1410185529/1500x500" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:domain" value="techlahoma.org" />
-  <meta name="twitter:description" value="Free networking event in Oklahoma City" />
+  <meta name="twitter:description" value="Make plans to attend our networking fair if you're looking for a job, contract work, mentorship opportunities, job candidates, or just networking!" />
   <meta name="twitter:image" content="https://pbs.twimg.com/profile_banners/2391970748/1410185529/1500x500" />
   <meta name="twitter:url" value="https://twitter.com/techlahoma" />
   <meta name="twitter:label1" value="Where" />
