updating index copy

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
   <meta name="twitter:image" content="https://pbs.twimg.com/profile_banners/2391970748/1410185529/1500x500" />
   <meta name="twitter:url" value="https://twitter.com/techlahoma" />
   <meta name="twitter:label1" value="Where" />
-  <meta name="twitter:data1" value="Project 3810 NW OKC" />
+  <meta name="twitter:data1" value="Rack59 Data Center" />
   <meta name="twitter:label2" value="When" />
-  <meta name="twitter:data2" value="Monday April 22 from 5:30pm to 7:30pm"/>
+  <meta name="twitter:data2" value="Monday January 27 from 5:30pm to 7:30pm"/>
 </head>
 <body>
   <app-root></app-root>
